fix collection links on IE11
SRFCMSAL-1341

--- a/source/_patterns/30-organisms/collection/collection.scss
+++ b/source/_patterns/30-organisms/collection/collection.scss
@@ -349,6 +349,7 @@ $background-overlap-wide: 50px;
 }
 
 .collection__link-text {
+  width: 100%; // necessary for IE11
   @include breakLongWords;
 
   @include tablet-up {
